@@ -23,3 +23,10 @@ context:
 # scheduler settings
 scheduler:
   class: RunnableSchedulerFactory
+
+# bootstrap agents
+bootstrap:
+  agents:
+    calc: com.almende.eve.agent.example.CalcAgent
+    test: com.almende.eve.agent.example.TestAgent
+
